Add 6th feature

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <p>Add 3rd feature in f3</p>
 <p>Add 4th feature in f4</p>
 <p>Add 5th feature in f5</p>
+<p>Add 6th feature in f6</p>
 <p>merging into main</p>
 <p>Final merge</p>
